Finishes mapping for line
To Do: 
-other shapes
-refactor: extract GridMapper
-have a look at LBMChannelFlow paint