@@ -1,8 +1,6 @@
 package irmb.flowsim.simulation;
 
-import irmb.flowsim.model.Line;
-import irmb.flowsim.model.Point;
-import irmb.flowsim.model.Shape;
+import irmb.flowsim.model.*;
 import irmb.flowsim.model.util.CoordinateTransformer;
 import irmb.flowsim.presentation.Painter;
 import irmb.flowsim.presentation.factory.ColorFactory;
@@ -15,7 +13,7 @@ import java.util.List;
 /**
  * Created by sven on 04.03.17.
  */
-public class LBMChannelFlowSimulation extends Simulation implements Observer<String> {
+public class LBMChannelFlowSimulation extends Simulation implements Observer<String>, ShapeVisitor {
     private UniformGrid grid;
     private LBMSolver solver;
     private ColorFactory colorFactory;
@@ -36,10 +34,10 @@ public class LBMChannelFlowSimulation extends Simulation implements Observer<Str
             for (int x = 0; x < grid.getHorizontalNodes(); x++) {
                 double velocity = grid.getVelocityAt(x, y);
                 painter.setColor(colorFactory.makeColorForValue(min, max, velocity));
-                Point origin = transformer.transformToPointOnScreen(grid.getOrigin());
+                Point origin = transformer.transformToPointOnScreen(grid.getTopLeft());
                 double dxScreen = transformer.scaleToScreenLength(grid.getDelta());
                 double dyScreen = transformer.scaleToScreenLength(grid.getDelta());
-                painter.fillRectangle(origin.getX() + x * dxScreen, origin.getY() + y * dyScreen, Math.ceil(dxScreen), Math.ceil(dyScreen));
+                painter.fillRectangle(origin.getX() + x * dxScreen, origin.getY() - grid.getHeight() + y * dyScreen, Math.ceil(dxScreen), Math.ceil(dyScreen));
             }
     }
 
@@ -70,19 +68,11 @@ public class LBMChannelFlowSimulation extends Simulation implements Observer<Str
 
     @Override
     public void setShapes(List<PaintableShape> shapeList) {
-        if (shapeList.size() == 0) return;
-        Shape shape = shapeList.get(0).getShape();
-        Line line = (Line) shape;
         grid.resetSolidNodes();
-//        int x0 = (int) Math.floor(line.getFirst().getX() / grid.getDelta());
-//        int y0 = (int) Math.floor(line.getFirst().getY() / grid.getDelta());
-//        int x1 = (int) Math.floor(line.getSecond().getX() / grid.getDelta());
-//        int y1 = (int) Math.floor(line.getSecond().getY() / grid.getDelta());
-        int x0 = (int) line.getFirst().getX();
-        int y0 = (int) line.getFirst().getY();
-        int x1 = (int) line.getSecond().getX();
-        int y1 = (int) line.getSecond().getY();
-        bresenham(x0, y0, x1, y1);
+        if (shapeList.size() == 0)
+            return;
+        Shape shape = shapeList.get(0).getShape();
+        shape.accept(this);
     }
 
     private void bresenham(int xstart, int ystart, int xend, int yend) {
@@ -134,5 +124,35 @@ public class LBMChannelFlowSimulation extends Simulation implements Observer<Str
     @Override
     public void update(String args) {
         notifyObservers(null);
+    }
+
+    @Override
+    public void visit(Line line) {
+        if (!grid.isPointInside(line.getFirst()) || !grid.isPointInside(line.getSecond()))
+            return;
+        double startX = (line.getFirst().getX() - grid.getTopLeft().getX()) / grid.getDelta();
+        double startY = (grid.getTopLeft().getY() - line.getFirst().getY()) / grid.getDelta();
+        double endX = (line.getSecond().getX() - grid.getTopLeft().getX()) / grid.getDelta();
+        double endY = (grid.getTopLeft().getY() - line.getSecond().getY()) / grid.getDelta();
+        int x0 = (int) Math.round(startX);
+        int y0 = (int) Math.round(startY);
+        int x1 = (int) Math.round(endX);
+        int y1 = (int) Math.round(endY);
+        bresenham(x0, y0, x1, y1);
+    }
+
+    @Override
+    public void visit(Rectangle rectangle) {
+
+    }
+
+    @Override
+    public void visit(PolyLine polyLine) {
+
+    }
+
+    @Override
+    public void visit(Point point) {
+
     }
 }
